fix13498_downloadMapDefaultSort - method newMapSelectionPanel: Add default ascending sorting to rowSorter